# LangChain-Family

./: requirements.txt
1_LLM/: embeddings_openai_model.py  llm_demo.py  open_source_model_from_hf.py  open_source_model_from_hf_local.py
2_Promts/: chat_prompt_templete.py  prompts_ui.py
Python/: requirements.txt
Python/1_LLM/: embeddings_open_source_model.py  open_source_model_from_hf_local.py
Python/2_Promts/: message_placeholder.py
Python/3_Structured_Output/: pydanticoutputparser.py
Python/4_Chain/: parallel_chain.py  sequential_chain.py
Python/5_Runnables/: runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py
Python/6_Document_Loaders/: pdf_loader.py  text_loader.py
Python/8_Vector_Store/my_chroma_db/: chroma.sqlite3
Python/9_Retrievers.py/: ContextualCompressionRetriever.py  NMR.py
Python/LangChain/1_LLM/: chat_openai.py  open_source_model_from_hf_local.py
Python/LangChain/4_Chain/: conditional_chain.py  parallel_chain.py
Python/LangChain/5_Runnables/: runnable_branch.py  runnable_parallel.py  runnable_sequence.py
Python/LangChain/6_Document_Loaders/: directory_loader.py  webbase_loader.py
Python/LangChain/7_Text_Splitt/: length_based.py  semantic_meaning_based.py  text_structure_based.py
Python/LangChain/8_Vector_Store/: croma_db.ipynb
Python/LangChain/9_Retrievers.py/: Multiquery_Retriever.py  (+1 more)
Python_Vector_Indexing/: README.md  fiass_indexing_openai.py  rag_app.py
Rust/1_model_access/hf_model_from_hf/: Cargo.toml
Rust/1_model_access/hf_model_from_hf/src/: main.rs
Rust/2_prompts/: Cargo.toml
(+27 files in other folders)
