[package]
name = "one_model_acc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
langchain-rust = { git = "https://github.com/Abraxas-365/langchain-rust" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"